# image_tool_pyside6

./: .gitignore  .pdm-python  pyproject.toml
example/: confirm_cut.ui  confirm_cut_ui.py  main.py  main.ui  main_ui.py
src/: CLAHE.ui  CLAHE_ui.py  confirm_cut.ui  confirm_cut_ui.py  cut.ui  cut_ui.py  main.py  main.ui  main_ui.py  process.py  view.py
src/image_transforms/: __init__.py  base.py  gray.py
src/imgtfs/: gray.py
tests/: test_gray.py
